--- a/ch14/ch14.tex
+++ b/ch14/ch14.tex
@@ -539,12 +539,11 @@ command will result in the plot shown in Figure A.1.
 \texttt{>> ezplot(y, [0 pi])}
 \begin{figure}[H]
 \includegraphics[width=0.9\linewidth]{40}
+\caption{Plot of the solution of the boundary value problem of Example}
 	\centering
 	\label{pfig:ch13_40}
 \end{figure}
-\textbf{FIGURE A.l:} Plot of the solution of the boundary value problem of Example A.4(b).
-\\
-\\
+
 The final useful feature of \texttt{dsolv} e is that it can solve systems of ODE. The 
 syntax is a natural extension of the previous codes: 
 \begin{center}
