--- a/ch9/ch9.tex
+++ b/ch9/ch9.tex
@@ -122,7 +122,7 @@ in the early twentieth century and independently by the Austrian mathematician a
       \begin{minipage}{0.20\linewidth}
           \begin{figure}[H]
               \includegraphics[width=\linewidth]{fig_9_1}
-              \caption{This is the first figure}
+              \caption[Vito Volterra]{Vito Volterra (1860-1940),Italian mathematician.}
               \label{fig:fig_9_1}
           \end{figure}
       \end{minipage}
@@ -130,7 +130,7 @@ in the early twentieth century and independently by the Austrian mathematician a
       \begin{minipage}{0.19\linewidth}
           \begin{figure}[H]
               \includegraphics[width=\linewidth]{fig_9_2}
-              \caption{This is the second figure}
+              \caption[Alfred Lotka]{Alfred Lotka (1990-1949), Austrian chemist and mathematician.}
               \label{fig:fig_9_2}
           \end{figure}
       \end{minipage}
@@ -210,14 +210,14 @@ y^{\prime}(t)=y-x y ; & y(0)=2
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{fig_9_3}
-    \caption{Using Euler's method with step size $h=0.01$ to solve the predator-prey problem of Example $9.2$ for the time range from $t=0$ to $t=50$ years. The first plot gives the approximations of the shark population (in hundreds) $x(t)(=$ solid red graph) along with the approximation for the sea-turtle population (in hundreds) $y(t)(=$ blue dash/dot graph). The second plot gives the parametric plot of $y$ versus $x$.}
+    \caption[Using Euler's method]{Using Euler's method with step size $h=0.01$ to solve the predator-prey problem of Example $9.2$ for the time range from $t=0$ to $t=50$ years. The first plot gives the approximations of the shark population (in hundreds) $x(t)(=$ solid red graph) along with the approximation for the sea-turtle population (in hundreds) $y(t)(=$ blue dash/dot graph). The second plot gives the parametric plot of $y$ versus $x$.}
     \label{fig:fig_9_3}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{fig_9_4}
-    \caption{The plots in this figure correspond to those in the previous one (for Example 9.2), except that the Runge-Kutta method is now used (with the same step size).}
+    \caption[Plots]{The plots in this figure correspond to those in the previous one (for Example 9.2), except that the Runge-Kutta method is now used (with the same step size).}
     \label{fig:fig_9_4}
 \end{figure}
 
@@ -252,7 +252,7 @@ $$
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{fig_9_5}
-    \caption{Illustration of the SIR-model for the spread of an infectious disease. The population is stratified into three subgroups and the transitions between groups are indicated with solid arrows. With the additional dotted arrow we get the SIRS model, where members of the removed class can again become susceptibles.}
+    \caption[Illustration of the SIR-model]{Illustration of the SIR-model for the spread of an infectious disease. The population is stratified into three subgroups and the transitions between groups are indicated with solid arrows. With the additional dotted arrow we get the SIRS model, where members of the removed class can again become susceptibles.}
     \label{fig:fig_9_5}
 \end{figure}
 
@@ -289,7 +289,7 @@ In light of (\ref{eqa5}), $ R=N-S-I$ so we need only consider the first two equa
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.5\textwidth]{fig_9_6}
-    \caption{Plots for the sustibles and infectious puplis in the English boarding school flu outbreak of Example 9.3. Note how quickly the flu spread and in particular that only about 20 or so students (out of 763 ) appeared to have escaped this flu.}
+    \caption[Plots for the sustibles and infectious puplis in the English boarding school flu outbreak]{Plots for the sustibles and infectious puplis in the English boarding school flu outbreak of Example 9.3. Note how quickly the flu spread and in particular that only about 20 or so students (out of 763 ) appeared to have escaped this flu.}
     \label{fig:fig_9_6}
 \end{figure}
 
@@ -313,7 +313,7 @@ end
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.5\textwidth]{fig_9_7}
-    \caption{Phase portrait for the flu-epidemic model of Example 9.3. All initial conditions start on the diagonal solid line $S+I=N$ (flows emanate from this line). The vertical dashed line is at $S=a / r$ and this is where the values of $I$ reach their maximum. Flow direction arrowheads were also added.}
+    \caption[Phase portrait for the flu-epidemic model]{Phase portrait for the flu-epidemic model of Example 9.3. All initial conditions start on the diagonal solid line $S+I=N$ (flows emanate from this line). The vertical dashed line is at $S=a / r$ and this is where the values of $I$ reach their maximum. Flow direction arrowheads were also added.}
     \label{fig:fig_9_7}
 \end{figure}
 
@@ -345,7 +345,7 @@ Once again, from (\ref{eqa5}) we have $R=N-S-I$ so we need only solve the system
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.5\textwidth]{fig_9_8}
-    \caption{Orbits for the SIRS disease model of Example 9.4, part (a). Flow directions are indicated with the added arrowheads. Each initial condition emanates from the diagonal line $S+I=N$ (shown). Note that regardless of the initial conditions (even if the whole population starts off infected), the disease eventually burns itself out as the infective population converges to zero.}
+    \caption[Orbits for the SIRS disease model]{Orbits for the SIRS disease model of Example 9.4, part (a). Flow directions are indicated with the added arrowheads. Each initial condition emanates from the diagonal line $S+I=N$ (shown). Note that regardless of the initial conditions (even if the whole population starts off infected), the disease eventually burns itself out as the infective population converges to zero.}
     \label{fig:fig_9_8}
 \end{figure}
 
@@ -366,7 +366,7 @@ Notice the drastic difference in the long-term outcomes of the two very similar 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.9\textwidth]{fig_9_9}
-    \caption{ Orbits for the SIRS disease model of Example 9.4, part (b). Flow directions are indicated with the added arrowheads. Each initial condition emanates from the diagonal line $S+I=N$, which is shown on the left figure. Note that here the disease continues to exist. The orbits spiral to an equilibrium point (which is the same for all initial conditions). The figure plot on the right is a magnification of 100 times (note scales).\\}
+    \caption[Orbits for the SIRS disease model]{ Orbits for the SIRS disease model of Example 9.4, part (b). Flow directions are indicated with the added arrowheads. Each initial condition emanates from the diagonal line $S+I=N$, which is shown on the left figure. Note that here the disease continues to exist. The orbits spiral to an equilibrium point (which is the same for all initial conditions). The figure plot on the right is a magnification of 100 times (note scales).\\}
     \label{fig:fig_9_9}
 \end{figure}
 
@@ -508,13 +508,12 @@ y^{\prime}(t)=y-y^{2}-r x y
       \begin{minipage}{0.50\linewidth}
           \begin{figure}[H]
               \includegraphics[width=\linewidth]{fig_9_10}
+\caption[Phase-plane diagram ]{Phase-plane diagram for the system (\ref{eqa11}) using r = 2. The directions of flow are indicated by arrows. In the regions between nullclines, the arrows are meant to only indicate whether the flow is left or right and up or down. The equilibrium solutions are indicated with open circles.}
               \label{fig:fig_9_10}
           \end{figure}
       \end{minipage}
       \hspace{0.05\linewidth}
-      \begin{minipage}{0.40\linewidth}
-          \captionof{figure}{Phase-plane diagram for the system (\ref{eqa11}) using r = 2. The directions of flow are indicated by arrows. In the regions between nullclines, the arrows are meant to only indicate whether the flow is left or right and up or down. The equilibrium solutions are indicated with open circles.}
-          \end{minipage} 
+
 
 
 From this phase diagram, we can now look to see what can happen to the orbit with initial condition $(x(0), y(0))=(.52, .5)$. Initially the orbit moves down and left. Either it will directly approach the equilibrium point $(1 / 3$, $1 / 3)$ or it will veer above or below. If it veers above, it will cross the nullcline $y=$ $1-2 x$ into the upper triangular region. Once in this region the flow changes to upward (and still to the left). Also, it could never cross back over $y=1-2 x$ back into the original region it started (since the horizontal arrows on this nullcline move to the left). By the same token, it could never cross the nullcline $y=1 / 2(1-$ $x$ ) into the lower-left region. If the orbit ever did make it to the vertical $x$-nullcline $x=0$, then it would have to stay on it and move vertically upward (actually, the orbit could never touch this line; see Exercise 7). In all cases, the orbit will tend to approach the equilibrium solution $(0,1)$. If the orbit initally veers off below the equilibrium point, then, as with the last possibility, we could show that the orbit would eventually approach the equilibrium point $(1,0)$.
@@ -527,7 +526,7 @@ From this phase diagram, we can now look to see what can happen to the orbit wit
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.9\textwidth]{fig_9_11}
-    \caption{ Phase portraits for the system $\left\{\begin{array}{l}x^{\prime}(t)=x-x^{2}-2 x y \\ y^{\prime}(t)=y-y^{2}-2 x y\end{array}\right.$ of Example $9.5$ near the equilibrium solution $(x(t), y(t)) \equiv(1 / 3,1 / 3)$, which is indicated by a circle. Flow directions have been inserted in the left portrait. The right portrait contains additional orbits. This equilibrium solution is unstable since initial conditions can be specified arbitrarily close to it and their orbits will move away from it as time goes on.}
+    \caption[Phase portraits]{ Phase portraits for the system $\left\{\begin{array}{l}x^{\prime}(t)=x-x^{2}-2 x y \\ y^{\prime}(t)=y-y^{2}-2 x y\end{array}\right.$ of Example $9.5$ near the equilibrium solution $(x(t), y(t)) \equiv(1 / 3,1 / 3)$, which is indicated by a circle. Flow directions have been inserted in the left portrait. The right portrait contains additional orbits. This equilibrium solution is unstable since initial conditions can be specified arbitrarily close to it and their orbits will move away from it as time goes on.}
     \label{fig:fig_9_11}
 \end{figure}
 \newpage
@@ -551,7 +550,7 @@ end
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.55\textwidth]{fig_9_12}
-    \caption{ Phase portrait for the system $\left\{\begin{array}{l}x^{\prime}(t)=x-x^{2}-x y / 2 \\ y^{\prime}(t)=y-y^{2}-x y / 2\end{array}\right.$ of Example $9.5$ near the equilibrium solution $(x(t), y(t)) \equiv(2 / 3,2 / 3)$, which is indicated by the circle. Flow directions have been inserted. This equilibrium solution is stable since any solution obtained with an initial condition close to $(2 / 3,2 / 3)$ will approach this equilibrium as time goes on.}
+    \caption[Phase portrait for the system]{ Phase portrait for the system $\left\{\begin{array}{l}x^{\prime}(t)=x-x^{2}-x y / 2 \\ y^{\prime}(t)=y-y^{2}-x y / 2\end{array}\right.$ of Example $9.5$ near the equilibrium solution $(x(t), y(t)) \equiv(2 / 3,2 / 3)$, which is indicated by the circle. Flow directions have been inserted. This equilibrium solution is stable since any solution obtained with an initial condition close to $(2 / 3,2 / 3)$ will approach this equilibrium as time goes on.}
     \label{fig:fig_9_12}
 \end{figure}
 
@@ -619,7 +618,7 @@ it would seem plausible that the phase portrait of (\ref{eqa13}) near the equili
 \noindent\begin{minipage}{0.35\textwidth}% adapt widths of minipages to your needs
 \includegraphics[width=\linewidth]{fig_9_13}
 \label{fig:fig_9_13}
-\captionof{figure}{Henri Poincaré (1854-1912), French mathematician}
+
 \end{minipage}%
 \hfill%
 \begin{minipage}{0.60\textwidth}
@@ -673,7 +672,7 @@ Case 3: $\Delta<0: \quad X(t)=\frac{e^{t r(1) t / 2}}{2}\left[\cos (t \sqrt{|\De
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.75\textwidth]{fig_9_14}
-    \caption{Summary of how the trace and determinant of $A$ determine the character of the phase portrait of the linear system $X^{\prime}(t)=A X$ near an isolated equilibrium solution. In the degenerate case where $\operatorname{det}(A)=\operatorname{tr}(A)^{2} / 4$ there will be different varieties of nodes. For a nonlinear system $\left\{\begin{array}{l}x^{\prime}(t)=f(x, y) \\ y^{\prime}(t)=g(x, y)\end{array}\right.$ with an isolated equilibrium solution at $(\alpha, \beta)$, and having a nonsingular Jacobian matrix $A=\left[\begin{array}{ll}f_{x} & f_{y} \\ g_{x} & g_{y}\end{array}\right]_{(\alpha, \beta)}$ corresponding phase portraits near $(\alpha, \beta)$ will be those indicated above, except possibly in the degenerate cases $\operatorname{tr}(A)=0$ or $\operatorname{det}(A)=\operatorname{tr}(A)^{2} / 4$}
+    \caption[Summary of how the trace and determinant]{Summary of how the trace and determinant of $A$ determine the character of the phase portrait of the linear system $X^{\prime}(t)=A X$ near an isolated equilibrium solution. In the degenerate case where $\operatorname{det}(A)=\operatorname{tr}(A)^{2} / 4$ there will be different varieties of nodes. For a nonlinear system $\left\{\begin{array}{l}x^{\prime}(t)=f(x, y) \\ y^{\prime}(t)=g(x, y)\end{array}\right.$ with an isolated equilibrium solution at $(\alpha, \beta)$, and having a nonsingular Jacobian matrix $A=\left[\begin{array}{ll}f_{x} & f_{y} \\ g_{x} & g_{y}\end{array}\right]_{(\alpha, \beta)}$ corresponding phase portraits near $(\alpha, \beta)$ will be those indicated above, except possibly in the degenerate cases $\operatorname{tr}(A)=0$ or $\operatorname{det}(A)=\operatorname{tr}(A)^{2} / 4$}
     \label{fig:fig_9_14}
 \end{figure}
 
@@ -737,12 +736,15 @@ where $s>0$ is a parameter.\\
 (c) Show that the region $R=$ $\{0<x<4,0<y<4\}$ is a basin of attraction.
 \end{minipage}%
 \hfill%
-\begin{minipage}{0.65\textwidth}
-\includegraphics[width=\linewidth]{fig_9_15}
-\label{fig:fig_9_15}
-\end{minipage}
-\captionof{figure}{Illustration of the Poincaré-Bendixson theorem for the system $\left\{\begin{array}{l}x^{\prime}(t)=2 x(1-x / 4) / 3-x y /(1+x) \\ y^{\prime}(t)=y(1-y / x) / 20\end{array}\right.$ with basin of attraction $R=\{0<x<4,0<y<4\}$
+
+\begin{figure}[h]
+\includegraphics[width=0.65\linewidth]{fig_9_15}
+\caption[Illustration of the Poincaré-Bendixson theorem ]{Illustration of the Poincaré-Bendixson theorem for the system $\left\{\begin{array}{l}x^{\prime}(t)=2 x(1-x / 4) / 3-x y /(1+x) \\ y^{\prime}(t)=y(1-y / x) / 20\end{array}\right.$ with basin of attraction $R=\{0<x<4,0<y<4\}$
 containing the unique equilibrium solution $(1,1)$ which is attracting. The equilibrium solution is located at the center of the circle shown. The outside orbit arose from the initial condition $(1,2)$ with a time interval $[0,200]$; the inside orbit arose from the initial condition $(1.25,1)$ with a time interval of $[0,150]$.} 
+\label{fig:fig_9_15}
+\end{figure}
+
+
 
 \noindent\rule{480pt}{0.4pt}
 \paragraph*{EXERCISE 9.3: }
@@ -874,7 +876,7 @@ xp(1)=-10*x*+10*y;  xp(2)=-x*z + 28*x-y;  xp(3)=x*y-8/3*z;
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.9\textwidth]{fig_9_16}
-    \caption{Views of the Lorenz Strange Attractor (Example 9.7) meteorological model. The single orbit shown (various 2-dimensional views of it) is often referred to as the "butterfly" graph. It is extremely chaotic. In fact, mathematicians conjecture that for any given sequence of positive integers: say $13,2,6,22,18,256,3$, there will be a time when this particular orbit will make 13 loops on the left wing of the butterfly, followed by 2 loops on the right wing, then 6 on the left again, and so on.}
+    \caption[Views of the Lorenz Strange Attractor meteorological model.]{Views of the Lorenz Strange Attractor (Example 9.7) meteorological model. The single orbit shown (various 2-dimensional views of it) is often referred to as the "butterfly" graph. It is extremely chaotic. In fact, mathematicians conjecture that for any given sequence of positive integers: say $13,2,6,22,18,256,3$, there will be a time when this particular orbit will make 13 loops on the left wing of the butterfly, followed by 2 loops on the right wing, then 6 on the left again, and so on.}
     \label{fig:fig_9_16}
 \end{figure}
 
@@ -885,14 +887,16 @@ xp(1)=-10*x*+10*y;  xp(2)=-x*z + 28*x-y;  xp(3)=x*y-8/3*z;
 >> plot(t,x2-x) %plot shown in Figure 9.17
 \end{lstlisting}
 
-\noindent\begin{minipage}{0.4\textwidth}
-\captionof{figure}{Graph of the difference of two $(\dot{x}$-coordinates of solutions of the Lorenz model whose initial conditions differ by only about $0.25 \%$. Notice that there seems to be reasonable agreement for only about 3 units of time (days?) or so and after this the difference becomes as chaotic as the functions themselves. This is part of the reason that weather forecasts are usually only given for 3 or so days in advance (and they are never guaranteed).}
-\end{minipage}%
-\hfill%
-\begin{minipage}{0.55\textwidth}
+\noindent
+\begin{figure}
 \includegraphics[width=\linewidth]{fig_9_17}
 \label{fig:fig_9_17}
-\end{minipage}
+\caption[Graph of the difference of two x-coordinates]{Graph of the difference of two $(\dot{x}$-coordinates of solutions of the Lorenz model whose initial conditions differ by only about $0.25 \%$. Notice that there seems to be reasonable agreement for only about 3 units of time (days?) or so and after this the difference becomes as chaotic as the functions themselves. This is part of the reason that weather forecasts are usually only given for 3 or so days in advance (and they are never guaranteed).}
+\end{figure}
+
+\hfill%
+
+
 
 \noindent\begin{minipage}{0.65\textwidth}
 \paragraph*{EXAMPLE 9.8: }\textit{(The Pendulum)} Figure \ref{fig:fig_9_18} shows a diagram of a pendulum. The pendulum consists of a rod of length $L$ that is connected to a hinge which is free to move back and forth in one direction. We assume the free end of the rod has a weight of mass $m$ attached to it and that the mass of the rod is negligible in comparison. We also assume the hinge is frictionless. The position of the pendulum is recorded by the angle $\theta$ that the rod makes with the vertical. The resultant gravitational force on the weight pulls in the direction opposite but tangent to the displacement (see figure). The other component of the gravitational force is canceled off by the rod. The velocity of the mass $m$ equals the rate of change of the arclength $s=L \theta$ that it displaces (see Figure \ref{fig:fig_9_18} from its equilibrium position, so the acceleration of the mass is the second derivative of this quantity. Newton's Second Law, $F=m a$, now gives us that 
@@ -903,11 +907,14 @@ xp(1)=-10*x*+10*y;  xp(2)=-x*z + 28*x-y;  xp(3)=x*y-8/3*z;
 	which we refer to as the \textbf{pendulum model.}
 \end{minipage}%
 \hfill%
-\begin{minipage}{0.3\textwidth}
+\begin{figure}
 \includegraphics[width=\linewidth]{fig_9_18}
+\caption[Illustration of a pendulum for Example 9.8.]{Illustration of a pendulum for Example 9.8.}
 \label{fig:fig_9_18}
-\end{minipage}
-\begin{flushright}\captionof{figure}{Illustration of a pendulum for Example 9.8.}\end{flushright}
+\end{figure}
+
+
+
 
 \begin{enumerate}[label=(\alph*),topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
 \item Numerically solve the pendulum model \ref{eqa15} with the initial conditions $\theta(0)=\pi / 6, \theta^{\prime}(0)=0$ (physically, this corresponds to the pendulum being held up at this angle and released at time $t=0$ ) and the following parameters: $L=1.5$ feet, $m=200 \mathrm{~g}$. Use the Runge-Kutta method with step size $h=0.1$ and solve for the time interval $0 \leq t \leq 15$ [seconds] $=1 / 4$ minute. Note that the mass, although specified, does not enter into the DE and thus the motion of the pendulum is independent of the mass.
@@ -929,7 +936,7 @@ SOLUTION: Part (a): Introducing the new function $z(t)=\theta^{\prime}(t)$, we c
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.6\textwidth]{fig_9_19}
-    \caption{Graphs of the first 15 seconds of motion of the two pendulum models in Example 9.8. The left-lagging graph is the ideal pendulum model and the second one is that of its linearization. Notice that the ideal pendulum starts to lag behind the linearized model of it. Both appear (and actually are) periodic.}
+    \caption[Graphs of the first 15 seconds of motion of the two pendulum models]{Graphs of the first 15 seconds of motion of the two pendulum models in Example 9.8. The left-lagging graph is the ideal pendulum model and the second one is that of its linearization. Notice that the ideal pendulum starts to lag behind the linearized model of it. Both appear (and actually are) periodic.}
     \label{fig:fig_9_19}
 \end{figure}
 
@@ -993,7 +1000,7 @@ xp(4)=-2*z+y-xe*y/dm^3-xm*y/de^3;
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.6\textwidth]{fig_9_20}
-    \caption{The orbit of the space station of Example 9.9. Each unit represents the mean distance from the Earth to the Moon. The Earth is represented by the circle on the right and the Moon by the pentacle in the center. It takes about $6.192$ years for the orbit to make a complete cycle.}
+    \caption[The orbit of the space station]{The orbit of the space station of Example 9.9. Each unit represents the mean distance from the Earth to the Moon. The Earth is represented by the circle on the right and the Moon by the pentacle in the center. It takes about $6.192$ years for the orbit to make a complete cycle.}
     \label{fig:fig_9_20}
 \end{figure}
 
