--- a/main.tex
+++ b/main.tex
@@ -36,25 +36,25 @@
     
     
  \part{Introduction to MATLAB and Numerical Preliminaries}
-%    \subfile{ch1/ch1}
-%    \subfile{ch2/ch2}
-%    \subfile{ch3/ch3}
-%    \subfile{ch4/ch4}
-%    \subfile{ch5/ch5}
-%	\subfile{ch6/ch6} 
-%	\subfile{ch7/ch7} 
+    \subfile{ch1/ch1}
+    \subfile{ch2/ch2}
+    \subfile{ch3/ch3}
+    \subfile{ch4/ch4}
+    \subfile{ch5/ch5}
+	\subfile{ch6/ch6} 
+	\subfile{ch7/ch7} 
 	
 \part{Ordinary Differential Equations}
-%	\subfile{ch8/ch8} 
+	\subfile{ch8/ch8} 
 	\subfile{ch9/ch9} 
-%	\subfile{ch10/ch10} 
+	\subfile{ch10/ch10} 
 	
 \part{Partial Differential Equations}
-%	\subfile{ch11/ch11}
-%  	\subfile{ch12/ch12} 
-%	\subfile{ch13/ch13}
-%	\subfile{ch14/ch14}
-%	\subfile{ch15/ch15}
+	\subfile{ch11/ch11}
+  	\subfile{ch12/ch12} 
+	\subfile{ch13/ch13}
+	\subfile{ch14/ch14}
+	\subfile{ch15/ch15}
 
 
 \end{document}
